--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -130,7 +130,7 @@
         <image style="height: 20px;" src="../../images/share.svg" mode="heightFix">
 
         </image>
-        <button style="background-color: transparent;position: absolute;top: 0;height: 20px;width: 128px;" open-type="share">
+        <button style="background-color: transparent;position: absolute;top: 0;right: 0; left: 0; height: 20px;width: 128px;" open-type="share">
 
         </button>
     </view>
